added a heading tag for testing

--- a/portfolio.html
+++ b/portfolio.html
@@ -11,6 +11,7 @@
     <h1>My Name is <span><font color="#f37021" >Explorin</font></span></h1>
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sint nam doloremque non magnam a saepe soluta qui aliquam ipsa voluptas recusandae rem facilis, eos nulla labore aperiam molestiae reprehenderit corrupti?</p>
     <hr>
+    <h1>Hey</h1>
     <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRWPx0VY3eM8flpkt2VSTaiD8qBjPdEVKMfWg&s" height="250" width="250" alt="Explorin Logo" >
     <hr>
     <table border="1">
